--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,3 +96,23 @@ footer a {
     background-position: center center;
 }
 
+/* ABOUT STYLING */
+#about-txt {
+    position: relative;
+    float: right;
+    right: 12.5vw;
+    top: 15vh;
+    height: 80vh;
+    width: 50%;
+    text-align: center;
+}
+
+#about img {
+    position: absolute;
+    top: 15vh;
+    float: left;
+    max-height: 70vh;
+    width: auto;
+    border-radius: 0 30px 30px 0;
+    border: 4px solid black;
+}
