--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,6 @@ footer {
     position: relative;
     float: left;
     top: 20px;
-    display: inline-block;
 }
 
 #media-links a {
@@ -113,24 +112,9 @@ footer {
 }
 
 /* ABOUT STYLING */
-#about-txt {
-    position: relative;
-    float: right;
-    right: 12.5vw;
-    top: 15vh;
-    height: 80vh;
-    width: 50%;
+#about {
     text-align: center;
-    color: #cac2ab;
-}
-
-#about h2 {
-    font-size: 400%;
-    padding-bottom: 20px;
-}
-
-#about p {
-    font-size: 200%;
+    margin-bottom: 75px;
 }
 
 #about img {
@@ -138,21 +122,41 @@ footer {
     top: 15vh;
     float: left;
     left: -4px;
-    max-height: 70vh;
+    height: 450px;
     width: auto;
     border-radius: 0 30px 30px 0;
     border: 4px solid black;
 }
 
+#about-txt {
+    position: relative;
+    top: 75px;
+    float: right;
+    margin: 27.5px;
+    max-width: calc(100vw - 500px);
+    color: #cac2ab;
+}
+
+#about h2 {
+    font-size: 300%;
+    padding-bottom: 20px;
+}
+
+#about p {
+    position: relative;
+    font-size: 200%;
+    width: 100%;
+}
+
 /* MENU STYLING */
 #menu {
+    min-height: auto;
     width: 100%;
-    height: 500vh;
     overflow: hidden;
 }
 
 #menu h3 {
-    font-size: 300%;
+    font-size: 250%;
     padding-top: 10px;
 }
 #menu p {
