--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -196,7 +196,19 @@ footer {
     border-radius: 0 30px 30px 0;
     border: 4px solid black;
     text-align: center;
+
+    animation-name: slide-bar;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
 }
+    /* SETUP SIDEBAR ANIMATION */
+    @keyframes slide-bar {
+        from    {left: -130px;}
+        to      {left: -4px;}
+    }
+
+
+
 
 #sidebar ul {
     position: relative;
