--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,15 +131,14 @@ footer {
 /* ABOUT STYLING */
 #about {
     text-align: center;
-    clear: both;
 }
 
 #about img {
     position: fixed;
-    top: 15vh;
+    top: 100px;
     float: left;
     left: -4px;
-    max-height: 70vh;
+    max-height: 560px;
     width: auto;
     border-radius: 0 30px 30px 0;
     border: 4px solid black;
@@ -186,10 +185,10 @@ footer {
     /* MENU SIDEBAR STYLING */
 #sidebar {
     position: fixed;
-    top: 15vh;
+    top: 100px;
     float: left;
     left: -4px;
-    height: 70vh;
+    height: 560px;
     width: 130px;
     background-color: #927E4D;
     color: #402C13;
