--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,17 +213,27 @@ footer {
 
 #sidebar ul {
     position: relative;
+
 }
 
 #sidebar li {
-    margin-top: 7.5vh;
-    margin-bottom: 7.5vh;
+    margin-top: 65px;
+    text-align: center;
+
 }
 
 #sidebar a {
     color: #402C13;
     text-decoration: none;
     font-size: 150%;
+    min-width: 150px;
+    padding: 0 10px 0 10px;
+
+}
+
+#sidebar a:hover {
+    border: 2px solid #402C13;
+    border-radius: 5px;
 }
 
     /* STARTERS SECTION STYLING */
